--- a/src/header/header.scss
+++ b/src/header/header.scss
@@ -3,8 +3,36 @@
     height: 200px;
     background-image: url("../images/bg.jpg");
     background-position-y: -229px;
+    //background-repeat: no-repeat;
+    //background-size: 100%;
+    background-position: center;
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-position: center center;
+    background-size: cover;
+  }
+
+  .avatar-container {
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 50%;
+    width: 165px;
+    height: 165px;
+    position: absolute;
+    top: 110px;
+    left: 40px;
+
+    .avatar {
+      background-image: url(/static/media/avatar.c5e0107c.jpg);
+      border-radius: 50%;
+      width: 150px;
+      height: 150px;
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-size: 120%;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%,-50%);
+    }
   }
 
   .menu {
