--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,3 +6,10 @@ $menu-background-color: $main-color;
 $menu-font-color: $white;
 $avatar-border-color: $transparent-white;
 
+
+$screen-sm-min: 768px;
+$screen-xs-max: ($screen-sm-min - 1);
+$screen-md-min: 992px;
+$screen-sm-max: ($screen-md-min - 1);
+$screen-lg-min: 1200px;
+$screen-md-max: ($screen-lg-min - 1);
